[package]
name = "cn-stratum"
version = "0.4.1"
authors = ["Kaz Wesley <kaz@lambdaverse.org>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "Monero/CryptoNote miner stratum protocol"
documentation = "https://docs.rs/cn-stratum"
keywords = ["stratum", "miner", "monero", "cryptonote", "XMR"]
categories = ["network-programming","encoding"]
repository = "https://github.com/kazcw/cn-stratum"

[dependencies]
failure = "0.1.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
arrayvec = { version = "0.4", features = ["serde-1"] }

[features]
default = ["client"]
client = []
